--- a/src/app/leftpane/leftpane.component.css
+++ b/src/app/leftpane/leftpane.component.css
@@ -45,11 +45,69 @@
 }
 
 .leftpaneContainer .links ul li:hover span, 
-.leftpaneContainer .links ul li:hover span a {
+.leftpaneContainer .links ul li:hover span a,
+.leftpaneContainer .links ul li.active span a {
     cursor: pointer;
     color: #111026
 }
 
-.leftpaneContainer .links ul li:hover span svg {
+.leftpaneContainer .links ul li:hover span svg,
+.leftpaneContainer .links ul li.active span svg {
     fill: #5E81F4;
+}
+
+.leftpaneContainer .links ul li span.bar {
+    display: none;
+    width: 3px;
+    height: 23px;
+    background-color: #5E81F4;
+    border-radius: 1.5px;
+    float: right;
+    margin-right: -1.5625rem; /* 25px */
+}
+
+.leftpaneContainer .links ul li.active span.bar {
+    display: inline-block;
+}
+
+.leftpaneContainer .cta {
+    background-color: #F5F5FB;
+    padding: 1.875rem; /* 30px */
+    border-radius: 1rem;
+    text-align: center;
+}
+
+.leftpaneContainer .cta span img {
+    margin-top: -4.375rem; /* -70px */
+}
+
+.leftpaneContainer .cta p {
+    margin: 0;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    padding-top: 0.5rem;
+    color: #A2A2C2;
+    font-weight: 400;
+}
+
+.leftpaneContainer .cta p span {
+    font-weight: 600;
+    color: #111026;
+}
+
+.leftpaneContainer .cta .btn {
+    cursor: pointer;
+    width: 100%;
+    margin-top: 2rem;
+    padding: 1rem;
+    border-radius: 1rem;
+    background-color: #5E81F4;
+    border: none;
+    font-size: 1rem;
+    color: #fff;
+    line-height: 1rem;
+}
+
+.leftpaneContainer .cta .btn:hover {
+    background-color: #5272db;
 }
