--- a/src/app/leftpane/leftpane.component.html
+++ b/src/app/leftpane/leftpane.component.html
@@ -13,7 +13,7 @@
     <section class="links">
         <ul>
             <!-- Dashboard -->
-            <li>
+            <li [ngClass]="tab === 'dashboard' ? 'active' : ''" (click)="sendTabValue('dashboard')">
                 <span>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g clip-path="url(#clip0)">
@@ -30,10 +30,12 @@
                 <span>
                     <a href="javascript:void()" routerLink="/">Dashboard</a>
                 </span>
+
+                <span class="bar"></span>
             </li>
 
             <!-- Classes -->
-            <li>
+            <li [ngClass]="tab === 'classes' ? 'active' : ''" (click)="sendTabValue('classes')">
                 <span>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M19 3H12.472C12.3173 3.00102 12.1645 2.96682 12.025 2.9L8.869 1.316C8.45239 1.10855 7.9934 1.00039 7.528 1H5C3.67441 1.00159 2.40356 1.52888 1.46622 2.46622C0.528882 3.40356 0.00158786 4.67441 0 6L0 18C0.00158786 19.3256 0.528882 20.5964 1.46622 21.5338C2.40356 22.4711 3.67441 22.9984 5 23H19C20.3256 22.9984 21.5964 22.4711 22.5338 21.5338C23.4711 20.5964 23.9984 19.3256 24 18V8C23.9984 6.67441 23.4711 5.40356 22.5338 4.46622C21.5964 3.52888 20.3256 3.00159 19 3ZM5 3H7.528C7.68266 2.99898 7.83552 3.03318 7.975 3.1L11.131 4.679C11.5472 4.88819 12.0062 4.99806 12.472 5H19C19.598 5.00098 20.1821 5.18067 20.6773 5.51601C21.1725 5.85135 21.5561 6.32704 21.779 6.882L2 6.994V6C2 5.20435 2.31607 4.44129 2.87868 3.87868C3.44129 3.31607 4.20435 3 5 3ZM19 21H5C4.20435 21 3.44129 20.6839 2.87868 20.1213C2.31607 19.5587 2 18.7956 2 18V8.994L22 8.881V18C22 18.7956 21.6839 19.5587 21.1213 20.1213C20.5587 20.6839 19.7956 21 19 21Z" />
@@ -43,10 +45,12 @@
                 <span>
                     <a href="javascript:void()" routerLink="/">Classes</a>
                 </span>
+
+                <span class="bar"></span>
             </li>
 
             <!-- Resources -->
-            <li>
+            <li [ngClass]="tab === 'resources' ? 'active' : ''" (click)="sendTabValue('resources')">
                 <span>
                     <svg width="20" height="24" viewBox="0 0 20 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M15 0H5C3.67441 0.00158786 2.40356 0.528882 1.46622 1.46622C0.528882 2.40356 0.00158786 3.67441 0 5V20C0 21.0609 0.421427 22.0783 1.17157 22.8284C1.92172 23.5786 2.93913 24 4 24H15C16.3256 23.9984 17.5964 23.4711 18.5338 22.5338C19.4711 21.5964 19.9984 20.3256 20 19V5C19.9984 3.67441 19.4711 2.40356 18.5338 1.46622C17.5964 0.528882 16.3256 0.00158786 15 0V0ZM18 5V16H6V2H15C15.7956 2 16.5587 2.31607 17.1213 2.87868C17.6839 3.44129 18 4.20435 18 5ZM4 2.172V16C3.29763 15.9994 2.6076 16.1847 2 16.537V5C2.00009 4.37969 2.19246 3.77466 2.55063 3.2682C2.90881 2.76175 3.41517 2.37877 4 2.172ZM15 22H4C3.46957 22 2.96086 21.7893 2.58579 21.4142C2.21071 21.0391 2 20.5304 2 20C2 19.4696 2.21071 18.9609 2.58579 18.5858C2.96086 18.2107 3.46957 18 4 18H18V19C18 19.7956 17.6839 20.5587 17.1213 21.1213C16.5587 21.6839 15.7956 22 15 22Z" />
@@ -56,10 +60,12 @@
                 <span>
                     <a href="javascript:void()" routerLink="/">Resources</a>
                 </span>
+
+                <span class="bar"></span>
             </li>
 
             <!-- Learning plan -->
-            <li>
+            <li [ngClass]="tab === 'plan' ? 'active' : ''" (click)="sendTabValue('plan')">
                 <span>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g clip-path="url(#clip0)">
@@ -79,10 +85,12 @@
                 <span>
                     <a href="javascript:void()" routerLink="/">Learning Plan</a>
                 </span>
+
+                <span class="bar"></span>
             </li>
 
             <!-- Chat -->
-            <li>
+            <li [ngClass]="tab === 'chat' ? 'active' : ''" (click)="sendTabValue('chat')">
                 <span>
                     <svg width="32" height="28" viewBox="0 0 32 28" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M24.0011 15.247C23.8565 12.907 23.0303 10.6605 21.6243 8.78442C20.2184 6.90834 18.2941 5.48469 16.0888 4.68899C13.8836 3.8933 11.4936 3.76033 9.21369 4.30649C6.93375 4.85266 4.86347 6.05407 3.25808 7.76262C1.65269 9.47117 0.582369 11.6122 0.179071 13.9217C-0.224228 16.2312 0.0571252 18.6082 0.988445 20.7597C1.91976 22.9112 3.46034 24.7432 5.42024 26.0297C7.38014 27.3163 9.67369 28.0012 12.0181 28H19.0011C20.3268 27.9987 21.5978 27.4715 22.5352 26.5341C23.4726 25.5967 23.9998 24.3257 24.0011 23V15.247ZM22.0011 23C22.0011 23.7956 21.6851 24.5587 21.1224 25.1213C20.5598 25.6839 19.7968 26 19.0011 26H12.0181C10.6071 25.9994 9.21197 25.7013 7.92383 25.1253C6.63568 24.5493 5.4834 23.7082 4.54213 22.657C3.5963 21.6063 2.88606 20.3655 2.45902 19.0178C2.03199 17.6701 1.89803 16.2467 2.06613 14.843C2.33156 12.6289 3.32632 10.5662 4.89357 8.97992C6.46082 7.39366 8.51143 6.37411 10.7221 6.082C11.1534 6.02795 11.5875 6.00056 12.0221 6C14.3526 5.99364 16.6109 6.8079 18.4011 8.3C19.4467 9.16894 20.3048 10.2412 20.9237 11.4516C21.5425 12.6621 21.909 13.9856 22.0011 15.342V23Z" />
@@ -95,10 +103,12 @@
                 <span>
                     <a href="javascript:void()" routerLink="/">Chat</a>
                 </span>
+
+                <span class="bar"></span>
             </li>
 
             <!-- Settings -->
-            <li>
+            <li [ngClass]="tab === 'settings' ? 'active' : ''" (click)="sendTabValue('settings')">
                 <span>          
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M12 8C11.2089 8 10.4355 8.2346 9.77772 8.67412C9.11993 9.11365 8.60723 9.73836 8.30448 10.4693C8.00173 11.2002 7.92252 12.0044 8.07686 12.7804C8.2312 13.5563 8.61216 14.269 9.17157 14.8284C9.73098 15.3878 10.4437 15.7688 11.2196 15.9231C11.9956 16.0775 12.7998 15.9983 13.5307 15.6955C14.2616 15.3928 14.8864 14.8801 15.3259 14.2223C15.7654 13.5645 16 12.7911 16 12C16 10.9391 15.5786 9.92172 14.8284 9.17157C14.0783 8.42143 13.0609 8 12 8ZM12 14C11.6044 14 11.2178 13.8827 10.8889 13.6629C10.56 13.4432 10.3036 13.1308 10.1522 12.7654C10.0009 12.3999 9.96126 11.9978 10.0384 11.6098C10.1156 11.2219 10.3061 10.8655 10.5858 10.5858C10.8655 10.3061 11.2219 10.1156 11.6098 10.0384C11.9978 9.96126 12.3999 10.0009 12.7654 10.1522C13.1308 10.3036 13.4432 10.56 13.6629 10.8889C13.8827 11.2178 14 11.6044 14 12C14 12.5304 13.7893 13.0391 13.4142 13.4142C13.0391 13.7893 12.5304 14 12 14Z" />
@@ -109,8 +119,22 @@
                 <span>
                     <a href="javascript:void()" routerLink="/">Settings</a>
                 </span>
+
+                <span class="bar"></span>
             </li>
         </ul>
+    </section>
+
+    <section class="cta">
+        <span>
+            <img src="../../assets/images/upgrade.png" alt="upgrade">
+        </span>
+
+        <p>
+            Upgrade to <span>PRO</span> for more resources
+        </p>
+
+        <button class="btn">Upgrade</button>
     </section>
 
 </section>
