--- a/src/app/center/center.component.css
+++ b/src/app/center/center.component.css
@@ -17,7 +17,6 @@
 }
 
 .center-pane-container .header .search span {
-
     cursor: pointer;
     display: flex;
     width: 55px;
@@ -27,4 +26,10 @@
     justify-content: center;
     border-radius: 12px;
     margin-left: 30px;
+}
+
+.center-pane-container ul {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
 }
