add latest reaults section in dashboard

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,16 @@
 .container-fluid {
     padding: 0;
 }
+
+.flex-container {
+    display: flex;
+}
+
+.flex-container .leftpane, .flex-container .rightpane {
+    width: 22.5%;
+}
+
+.flex-container .centerpane {
+    width: 55%;
+    background-color: #F5F5FB;
+}
