--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,18 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-lg-3">
-            <app-leftpane (passTabValue)="sendTabValueFromLeftPane($event)"></app-leftpane>
-        </div>
+        <div class="col-lg-12 flex-container">
+            <div class="leftpane">
+                <app-leftpane (passTabValue)="sendTabValueFromLeftPane($event)"></app-leftpane>
+            </div>
+            
+            <div class="centerpane">
+                <app-center [tabValueFromLeftPane]="tabValueFromLeftPane"></app-center>
+            </div>
 
-        <div class="col-lg-6" style="background-color: #F5F5FB;">
-            <app-center [tabValueFromLeftPane]="tabValueFromLeftPane"></app-center>
-        </div>
-
-        <div class="col-lg-3">
-            <app-rightpane></app-rightpane>
+            <div class="rightpane">
+                <app-rightpane></app-rightpane>
+            </div>
         </div>
     </div>
 </div>
