--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,99 +1,205 @@
-
 <section class="greeting">
-    <div class="row">
-        <div class="col-7">
-            <h2>Welcome back Anna!</h2>
-            <p>You’ve learned 80% of your goal this week!</p>
-            <p>Keep it up and improve your results!</p>
-        </div>
-        <div class="col-5">
-            <img src="../../assets/images/greeting.png" alt="">
-        </div>
+  <div class="row">
+    <div class="col-7">
+      <h2>Welcome back Anna!</h2>
+      <p>You’ve learned 80% of your goal this week!</p>
+      <p>Keep it up and improve your results!</p>
     </div>
+    <div class="col-5">
+      <img src="../../assets/images/greeting.png" alt="" />
+    </div>
+  </div>
 </section>
 
 <section class="data">
-    <section class="latest-results">
-        <div class="header">
-            <span class="title">Latest results</span>
-            <span class="more">
-                More
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <g clip-path="url(#clip0)">
-                    <path d="M15.416 6.60467L12.83 4.01933C12.705 3.89435 12.5354 3.82414 12.3587 3.82414C12.1819 3.82414 12.0124 3.89435 11.8873 4.01933C11.7624 4.14435 11.6921 4.31389 11.6921 4.49067C11.6921 4.66744 11.7624 4.83698 11.8873 4.962L14.2573 7.33333H0.666667C0.489856 7.33333 0.320286 7.40357 0.195262 7.5286C0.0702379 7.65362 0 7.82319 0 8H0C0 8.17681 0.0702379 8.34638 0.195262 8.4714C0.320286 8.59643 0.489856 8.66667 0.666667 8.66667H14.298L11.8873 11.0767C11.8253 11.1386 11.7762 11.2121 11.7426 11.293C11.7091 11.374 11.6918 11.4607 11.6918 11.5483C11.6918 11.6359 11.7091 11.7227 11.7426 11.8036C11.7762 11.8846 11.8253 11.9581 11.8873 12.02C12.0124 12.145 12.1819 12.2152 12.3587 12.2152C12.5354 12.2152 12.705 12.145 12.83 12.02L15.4167 9.434C15.7906 9.05811 16.0005 8.54942 16.0004 8.0192C16.0002 7.48897 15.7901 6.98038 15.416 6.60467Z" fill="#111026"/>
-                    </g>
-                    <defs>
-                    <clipPath id="clip0">
-                    <rect width="16" height="16" fill="white"/>
-                    </clipPath>
-                    </defs>
-                </svg>
+  <section class="latest-results">
+    <div class="header">
+      <span class="title">Latest results</span>
+      <span class="more">
+        More
+        <svg
+          width="16"
+          height="16"
+          viewBox="0 0 16 16"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <g clip-path="url(#clip0)">
+            <path
+              d="M15.416 6.60467L12.83 4.01933C12.705 3.89435 12.5354 3.82414 12.3587 3.82414C12.1819 3.82414 12.0124 3.89435 11.8873 4.01933C11.7624 4.14435 11.6921 4.31389 11.6921 4.49067C11.6921 4.66744 11.7624 4.83698 11.8873 4.962L14.2573 7.33333H0.666667C0.489856 7.33333 0.320286 7.40357 0.195262 7.5286C0.0702379 7.65362 0 7.82319 0 8H0C0 8.17681 0.0702379 8.34638 0.195262 8.4714C0.320286 8.59643 0.489856 8.66667 0.666667 8.66667H14.298L11.8873 11.0767C11.8253 11.1386 11.7762 11.2121 11.7426 11.293C11.7091 11.374 11.6918 11.4607 11.6918 11.5483C11.6918 11.6359 11.7091 11.7227 11.7426 11.8036C11.7762 11.8846 11.8253 11.9581 11.8873 12.02C12.0124 12.145 12.1819 12.2152 12.3587 12.2152C12.5354 12.2152 12.705 12.145 12.83 12.02L15.4167 9.434C15.7906 9.05811 16.0005 8.54942 16.0004 8.0192C16.0002 7.48897 15.7901 6.98038 15.416 6.60467Z"
+              fill="#111026"
+            />
+          </g>
+          <defs>
+            <clipPath id="clip0">
+              <rect width="16" height="16" fill="white" />
+            </clipPath>
+          </defs>
+        </svg>
+      </span>
+    </div>
+    <div class="body">
+      <ul>
+        <li>
+          <div class="subject">
+            <span class="unit">Unit 5 - </span>
+            <span class="type">Technology</span>
+          </div>
+          <div class="progress">
+            <span class="bar">
+              <span class="fill" style="width: 25%"></span>
             </span>
-        </div>
-        <div class="body">
-            <ul>
-                <li>
-                    <div class="subject">
-                        <span class="unit">Unit 5 - </span>
-                        <span class="type">Technology</span>
-                    </div>
-                    <div class="progress">
-                        <span class="bar">
-                            <span class="fill" style="width: 25%;"></span>
-                        </span>
-                        <span class="percentage" style="color: #FF808B;">25%</span>
-                    </div>
-                </li>
-                <li>
-                    <div class="subject">
-                        <span class="unit">Unit 12 - </span>
-                        <span class="type">Ecology</span>
-                    </div>
-                    <div class="progress">
-                        <span class="bar">
-                            <span class="fill" style="width: 44%;"></span>
-                        </span>
-                        <span class="percentage" style="color: #5E81F4;">44%</span>
-                    </div>
-                </li>
-                <li>
-                    <div class="subject">
-                        <span class="unit">Unit 9 - </span>
-                        <span class="type">Real estate</span>
-                    </div>
-                    <div class="progress">
-                        <span class="bar">
-                            <span class="fill" style="width: 40%;"></span>
-                        </span>
-                        <span class="percentage" style="color: #5E81F4;">40%</span>
-                    </div>
-                </li>
-                <li>
-                    <div class="subject">
-                        <span class="unit">Unit 8 - </span>
-                        <span class="type">Education</span>
-                    </div>
-                    <div class="progress">
-                        <span class="bar">
-                            <span class="fill" style="width: 15%;"></span>
-                        </span>
-                        <span class="percentage" style="color: #FF808B;">15%</span>
-                    </div>
-                </li>
-                <li>
-                    <div class="subject">
-                        <span class="unit">Unit 16 - </span>
-                        <span class="type">Job market</span>
-                    </div>
-                    <div class="progress">
-                        <span class="bar">
-                            <span class="fill" style="width: 75%;"></span>
-                        </span>
-                        <span class="percentage" style="color: #5E81F4;">75%</span>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </section>
-</section>
+            <span class="percentage" style="color: #ff808b">25%</span>
+          </div>
+        </li>
+        <li>
+          <div class="subject">
+            <span class="unit">Unit 12 - </span>
+            <span class="type">Ecology</span>
+          </div>
+          <div class="progress">
+            <span class="bar">
+              <span class="fill" style="width: 44%"></span>
+            </span>
+            <span class="percentage" style="color: #5e81f4">44%</span>
+          </div>
+        </li>
+        <li>
+          <div class="subject">
+            <span class="unit">Unit 9 - </span>
+            <span class="type">Real estate</span>
+          </div>
+          <div class="progress">
+            <span class="bar">
+              <span class="fill" style="width: 40%"></span>
+            </span>
+            <span class="percentage" style="color: #5e81f4">40%</span>
+          </div>
+        </li>
+        <li>
+          <div class="subject">
+            <span class="unit">Unit 8 - </span>
+            <span class="type">Education</span>
+          </div>
+          <div class="progress">
+            <span class="bar">
+              <span class="fill" style="width: 15%"></span>
+            </span>
+            <span class="percentage" style="color: #ff808b">15%</span>
+          </div>
+        </li>
+        <li>
+          <div class="subject">
+            <span class="unit">Unit 16 - </span>
+            <span class="type">Job market</span>
+          </div>
+          <div class="progress">
+            <span class="bar">
+              <span class="fill" style="width: 75%"></span>
+            </span>
+            <span class="percentage" style="color: #5e81f4">75%</span>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </section>
 
+  <section class="time-spent">
+    <div class="header">
+      <span class="title">Time Spent on Learning</span>
+      <span>
+        <select name="duration" class="duration" id="">
+          <option value="">Last Week</option>
+          <option value="">30 Days</option>
+          <option value="">90 Days</option>
+        </select>
+      </span>
+    </div>
+    <div class="body">
+      <ul class="progress">
+        <li>
+          <span class="day">Mon</span>
+          <span class="bar">
+            <span class="writing" style="height: 25%"></span>
+            <span class="listening" style="height: 25%"></span>
+            <span class="grammar" style="height: 20%"></span>
+            <span class="vocabulary" style="height: 30%"></span>
+          </span>
+        </li>
+        <li>
+          <span class="day">Tue</span>
+          <span class="bar">
+            <span class="writing" style="height: 35%"></span>
+            <span class="listening" style="height: 10%"></span>
+            <span class="grammar" style="height: 40%"></span>
+            <span class="vocabulary" style="height: 15%"></span>
+          </span>
+        </li>
+        <li>
+          <span class="day">Wed</span>
+          <span class="bar">
+            <span class="writing" style="height: 15%"></span>
+            <span class="listening" style="height: 30%"></span>
+            <span class="grammar" style="height: 15%"></span>
+            <span class="vocabulary" style="height: 40%"></span>
+          </span>
+        </li>
+        <li>
+          <span class="day">Thu</span>
+          <span class="bar">
+            <span class="writing" style="height: 10%"></span>
+            <span class="listening" style="height: 50%"></span>
+            <span class="grammar" style="height: 35%"></span>
+            <span class="vocabulary" style="height: 5%"></span>
+          </span>
+        </li>
+        <li>
+          <span class="day">Fri</span>
+          <span class="bar">
+            <span class="writing" style="height: 15%"></span>
+            <span class="listening" style="height: 20%"></span>
+            <span class="grammar" style="height: 35%"></span>
+            <span class="vocabulary" style="height: 30%"></span>
+          </span>
+        </li>
+        <li>
+          <span class="day">Sat</span>
+          <span class="bar">
+            <span class="writing" style="height: 30%"></span>
+            <span class="listening" style="height: 20%"></span>
+            <span class="grammar" style="height: 20%"></span>
+            <span class="vocabulary" style="height: 30%"></span>
+          </span>
+        </li>
+        <li>
+          <span class="day">Sun</span>
+          <span class="bar">
+            <span class="writing" style="height: 20%"></span>
+            <span class="listening" style="height: 30%"></span>
+            <span class="grammar" style="height: 30%"></span>
+            <span class="vocabulary" style="height: 20%"></span>
+          </span>
+        </li>
+      </ul>
+
+      <ul class="subject">
+        <li>
+          <span class="circle vocabulary"></span>
+          <span class="text">Vocabulary</span>
+        </li>
+        <li>
+          <span class="circle grammar"></span>
+          <span class="text">Grammar</span>
+        </li>
+        <li>
+          <span class="circle listening"></span>
+          <span class="text">Listening</span>
+        </li>
+        <li>
+          <span class="circle writing"></span>
+          <span class="text">Writing</span>
+        </li>
+      </ul>
+    </div>
+  </section>
+</section>
