Add section subjects in rightpane component

--- a/src/app/rightpane/rightpane.component.html
+++ b/src/app/rightpane/rightpane.component.html
@@ -51,4 +51,32 @@
 
     <div class="designation">Student</div>
   </section>
+
+  <section class="subjects">
+    <div class="subject">
+      <div class="class">B2</div>
+      <div class="topic">
+        <span class="topic-title">English</span>
+        <span class="topic-proficiency">High Intermediate</span>
+      </div>
+      <div class="progress-bar">
+        <span class="bar">
+          <span class="progress" style="width: 50%"></span>
+        </span>
+      </div>
+    </div>
+
+    <div class="subject">
+      <div class="class">C2</div>
+      <div class="topic">
+        <span class="topic-title">Spanish</span>
+        <span class="topic-proficiency">Advanced</span>
+      </div>
+      <div class="progress-bar">
+        <span class="bar">
+          <span class="progress" style="width: 70%"></span>
+        </span>
+      </div>
+    </div>
+  </section>
 </section>
