--- a/src/app/rightpane/rightpane.component.css
+++ b/src/app/rightpane/rightpane.component.css
@@ -59,3 +59,63 @@
   margin-top: 10px;
   font-weight: 400; /* regular */
 }
+
+.subjects {
+  margin-top: 4.125rem; /* 66px */
+}
+
+.subjects .subject {
+  display: flex;
+  margin-bottom: 2rem;
+}
+
+.subjects .subject .class {
+  width: 10%;
+  font-size: 1rem; /* 16px */
+  line-height: 1rem; /* 16px */
+  padding: 1rem; /* 16px */
+  border-radius: 0.5rem; /* 0.8px */
+  background-color: #f5f5f7;
+  color: #111026;
+}
+
+.subjects .subject .topic {
+  padding: 0rem 0.5rem; /* 24px */
+  width: 60%;
+}
+
+.subjects .subject .topic .topic-title {
+  display: block;
+  font-size: 0.8rem; /* 12px */
+  line-height: 1.5rem; /* 24px */
+  color: #111026;
+  font-weight: 400; /* regular */
+}
+
+.subjects .subject .topic .topic-proficiency {
+  font-size: 0.7rem; /* 14px */
+  line-height: 1.3125rem; /* 21px */
+  color: #a2a2c2;
+}
+
+.subjects .subject .progress-bar {
+  display: flex;
+  align-items: center;
+  width: 30%;
+}
+
+.subjects .subject .progress-bar .bar {
+  position: relative;
+  width: 70px;
+  height: 5px;
+  border-radius: 3px;
+  background-color: #dcdce5;
+}
+
+.subjects .subject .progress-bar .bar .progress {
+  position: absolute;
+  display: inline-block;
+  background-color: #5e81f4;
+  border-radius: 3px;
+  height: 5px;
+}
