--- a/src/app/rightpane/rightpane.component.css
+++ b/src/app/rightpane/rightpane.component.css
@@ -119,3 +119,38 @@
   border-radius: 3px;
   height: 5px;
 }
+
+.reminders .header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.reminders .body .reminder {
+  display: flex;
+  margin-top: 1.5rem;
+  align-items: flex-start;
+}
+
+.reminders .body .reminder .icon {
+  padding: 1rem;
+  border-radius: 0.5rem;
+}
+
+.reminders .body .reminder .reminder-content {
+  padding-left: 1rem;
+}
+
+.reminders .body .reminder .reminder-content .title {
+  font-size: 0.9rem;
+  line-height: 1.5rem;
+  color: #131336;
+  font-weight: 400;
+}
+
+.reminders .body .reminder .reminder-content .date {
+  font-size: 0.8rem;
+  line-height: 1.5rem;
+  font-weight: 400;
+  color: #a2a2c2;
+}
