--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,24 @@
-
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-lg-12 flex-container">
-            <div class="leftpane">
-                <app-leftpane (passTabValue)="sendTabValueFromLeftPane($event)"></app-leftpane>
-            </div>
-            
-            <div class="centerpane">
-                <app-center [tabValueFromLeftPane]="tabValueFromLeftPane"></app-center>
-            </div>
+  <div class="row">
+    <div class="col-lg-12 flex-container">
+      <div class="leftpane" *ngIf="toggleBtnClick">
+        <app-leftpane
+          (passTabValue)="sendTabValueFromLeftPane($event)"
+        ></app-leftpane>
+      </div>
 
-            <div class="rightpane">
-                <app-rightpane></app-rightpane>
-            </div>
-        </div>
+      <div class="centerpane">
+        <app-center
+          (clickEvent)="toggleBtnClick = $event"
+          [tabValueFromLeftPane]="tabValueFromLeftPane"
+        ></app-center>
+      </div>
+
+      <div class="rightpane">
+        <app-rightpane></app-rightpane>
+      </div>
     </div>
+  </div>
 </div>
 
 <router-outlet></router-outlet>
-
-
-
