--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -278,3 +278,9 @@
     margin-bottom: 1.5rem;
   }
 }
+
+@media screen and (max-width: 767px) {
+  .greeting .responsive-image {
+    margin-top: 0;
+  }
+}
