--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -6,7 +6,11 @@
       <p>Keep it up and improve your results!</p>
     </div>
     <div class="col-5">
-      <img src="../../assets/images/greeting.png" alt="" />
+      <img
+        src="../../assets/images/greeting.png"
+        alt=""
+        class="responsive-image"
+      />
     </div>
   </div>
 </section>
