--- a/src/app/leftpane/leftpane.component.html
+++ b/src/app/leftpane/leftpane.component.html
@@ -1,4 +1,8 @@
 <section class="leftpaneContainer">
+  <section class="close" (click)="functionClosePane()">
+    <span>X</span>
+  </section>
+
   <section class="logo">
     <span>
       <svg
