--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,14 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-lg-12 flex-container">
-      <div class="leftpane" *ngIf="toggleBtnClick">
+      <div class="leftpane" *ngIf="isLeftpaneVisible">
         <app-leftpane
           (passTabValue)="sendTabValueFromLeftPane($event)"
         ></app-leftpane>
       </div>
 
       <div class="centerpane">
-        <app-center
-          (clickEvent)="toggleBtnClick = $event"
-          [tabValueFromLeftPane]="tabValueFromLeftPane"
-        ></app-center>
+        <app-center [tabValueFromLeftPane]="tabValueFromLeftPane"></app-center>
       </div>
 
       <div class="rightpane">
