Add profile toggle button in centerpane, modify sidebars service for toggling profile

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
         <app-center [tabValueFromLeftPane]="tabValueFromLeftPane"></app-center>
       </div>
 
-      <div class="rightpane">
+      <div class="rightpane" *ngIf="isRightPaneVisible">
         <app-rightpane></app-rightpane>
       </div>
     </div>
