--- a/src/app/rightpane/rightpane.component.html
+++ b/src/app/rightpane/rightpane.component.html
@@ -1,4 +1,7 @@
 <section class="right-pane-container">
+  <section class="close" (click)="functionRightPane()">
+    <span>X</span>
+  </section>
   <section class="logout">
     <span class="text">Logout</span>
     <span class="icon">
