--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -33,9 +33,11 @@
 
   .flex-container .rightpane {
     position: absolute;
-    width: 400px;
-    right: -400px;
-    display: none;
+    width: 80%;
+    z-index: 1;
+    right: 0;
+    top: 0;
+    background-color: #f5f5fb;
   }
 }
 
