--- a/src/app/leftpane/leftpane.component.html
+++ b/src/app/leftpane/leftpane.component.html
@@ -22,7 +22,7 @@
     <span>Stringle</span>
   </section>
 
-  <section class="links">
+  <section class="tabs">
     <ul>
       <!-- Dashboard -->
       <li
