optimized user interface

--- a/src/app/center/center.component.css
+++ b/src/app/center/center.component.css
@@ -7,9 +7,11 @@
 }
 
 .center-pane-container .header .toggleBtn {
-  float: left;
   border: none;
+  position: absolute;
   background-color: transparent;
+  left: 15px;
+  top: 42px;
 }
 
 .center-pane-container .header .toggleBtn span {
