--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -61,6 +61,11 @@
   color: #111026;
 }
 
+.data .latest-results .header span.more,
+.data .time-spent .header span.more {
+  cursor: pointer;
+}
+
 .data .latest-results .header span.more svg {
   vertical-align: middle;
 }
