--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -19,6 +19,7 @@
 @media screen and (max-width: 1300px) {
   .flex-container {
     display: block;
+    padding: 0;
   }
 
   .flex-container .centerpane {
