--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <div class="row">
+  <div class="row no-margin">
     <div class="col-lg-12 flex-container">
       <div class="leftpane" *ngIf="isLeftpaneVisible">
         <app-leftpane
